--- a/tripadvios__1.css
+++ b/tripadvios__1.css
@@ -1360,8 +1360,9 @@ body {
 
 .Best_award_overall{
 
-    background-color:  #FFF7E1;
-   
+    background-color: #FFF7E1;
+    
+    overflow: hidden;
 
 }
 
@@ -1374,32 +1375,163 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding: 2rem 2rem 0rem 2rem;
+    max-width: 368px;
+
 
 }
 
 .best_awards_log{
 
-    width: 50px;
+    width: 60px;
 }
 
 .best_award_1{
-    margin: 5px 0rem 0rem 0rem;
+    margin: 19px 0rem 0rem 0rem;
+    FONT-SIZE: 33px;
+    -webkit-text-stroke: medium;
 
 }
 
 .best_award_2{
 
-    margin: 5px 0rem 0rem 0rem;
+    margin: 18px 0rem 0rem 0rem;
+    font-size: 17px;
+    font-weight: 300;
 }
 
 .winners_btn{
 
 
     margin: 10px 0rem 0rem 0rem;
+    padding: 9px 14px 10px 15px;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+}
+
+
+.best_award_img{
+    text-align-last: end;
+    margin: 4rem 0rem 0rem 0rem;
+
 }
 
 
 .best_award_img_1{
 
-    width: 50px;
+    width: 500px;
 }
+
+
+
+
+
+
+@media screen and (min-width:700px) {
+
+    .Best_award_overall_1{
+
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: center;
+    }
+
+
+    .Best_award_overall {
+        background-color: #FFF7E1;
+       
+        overflow: hidden;
+}
+.Best_award_s1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 7rem 2rem 0rem 2rem;
+    max-width: 368px;
+    align-self: self-start;
+
+}
+
+
+.best_award_2 {
+    margin: 18px 0rem 0rem 0rem;
+    font-size: 25px;
+    font-weight: 300;
+}
+.best_award_img {
+    text-align-last: end;
+    margin:2rem -17rem 2rem 0rem;
+}
+.best_award_img_1{
+
+    width: 600px;
+}
+}
+
+
+
+
+@media screen and (min-width:900px) {
+
+    .Best_award_overall_1{
+
+        display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+    
+
+
+    .Best_award_overall {
+        background-color: #FFF7E1;
+        height: 600px;
+        overflow: hidden;
+}
+.Best_award_s1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 7rem 2rem 0rem 2rem;
+    max-width: 368px;
+    align-self: self-start;
+
+}
+
+.best_award_1 {
+    margin: 19px 0rem 0rem 0rem;
+    FONT-SIZE: 45px;
+    -webkit-text-stroke: medium;
+}
+
+.best_award_2 {
+    margin: 18px 0rem 0rem 0rem;
+    font-size: 25px;
+    font-weight: 300;
+}
+.best_award_img {
+    text-align-last: end;
+    margin:-2rem -9rem 0rem 0rem;
+}
+.best_award_img_1{
+
+    width: 674px;
+}
+
+}
+
+
+
+/* footer section css */
+
+
+.footer_section_overall{
+
+    background-color: #FFF7E1;
+    margin: 3rem 0rem 0rem 0rem;;
+}
+
+
+
